<resources>
    <string name="app_name">learningBasics</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Resultado</string>
    <string name="recalculate">Recalcular</string>
    <string name="error">Error</string>
    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>

    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura.</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>

    <!--TODOAPP-->
    <string name="todo_title">Hola, Said</string>
    <string name="todo_categories">Tus categorias</string>
    <string name="todo_tasks">Tus Tareas</string>
    <string name="todo_dialog">Añade una tarea</string>
    <string name="todo_text_bussiness">Negocios</string>
    <string name="todo_text_personal">Personal</string>
    <string name="todo_text_others">Otros</string>
    <string name="todo_add_task">Añadir Tarea</string>

    <string name="title_activity_result" />
</resources>