<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/todo_background_todo_app"
    android:paddingVertical="22dp"
    android:paddingHorizontal="22dp">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todo_dialog"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:backgroundTint="@color/black">

    </EditText>

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBussiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_text_bussiness"
            android:checked="true"
            android:buttonTint="@color/todo_business_category">

        </RadioButton>

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_text_personal"
            android:checked="true"
            android:buttonTint="@color/todo_personal_category">

        </RadioButton>

        <RadioButton
            android:id="@+id/rbOtros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_text_others"
            android:checked="true"
            android:buttonTint="@color/todo_other_category">

        </RadioButton>

    </RadioGroup>

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/todo_accent"
        android:text="@string/todo_add_task">

    </Button>

</LinearLayout>